人性化修改&Enter提交

--- a/获取贴吧BDUSS/获取贴吧BDUSS.csproj
+++ b/获取贴吧BDUSS/获取贴吧BDUSS.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>bdusstool</RootNamespace>
-    <AssemblyName>获取贴吧BDUSS</AssemblyName>
+    <AssemblyName>百度账号BDUSS获取器</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PublishUrl>发布\</PublishUrl>
